# web_hw6

./: connection.py  create_table.py  delete.py  docker-compose.yml  insert_data.py  pyproject.toml  select_data.py
scripts/: query_1.sql  query_10.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql
