[tool.poetry]
name = "web-hw6"
version = "0.1.0"
description = ""
authors = ["marinasemak <marina.semak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.9"
faker = "^30.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
